<resources>
    <string name="app_name">Online Talk</string>
    <string name="or">|</string>

    <string name="email_hint">E-mail信箱</string>
    <string name="account_hint">帳號名稱</string>
    <string name="password_hint">密碼</string>
    <string name="password_again_hint">確認密碼</string>
    <string name="login_button_text">登入</string>
    <string name="login_forgot_password">忘記密碼</string>
    <string name="login_sign_up"><u>註冊</u></string>
    <string name="sign_up_title">註冊帳號</string>

</resources>
