<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingLeft="@dimen/login_page_padding"
        android:paddingRight="@dimen/login_page_padding"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/loginEtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/loginEtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/loginTvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="4dp"
                android:text="@string/login_forgot_password"
                android:textColor="@color/colorSecondary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/loginTvTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/or"

                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:textColor="@color/colorSecondary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/loginTvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_sign_up"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"/>
        </LinearLayout>

        <Button
            android:id="@+id/loginLoginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:background="@drawable/btn_login"
            android:text="@string/login_button_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>